--- a/week4/css/style.css
+++ b/week4/css/style.css
@@ -1,6 +1,7 @@
 body {
     background: #fff5b7;
     font-family: arial;
+    font-size: 18px;
 }
 h1 {
     font-size: 18px;
@@ -19,6 +20,14 @@ h2 {
 p {
     font-size: 14px;
 }
-header, footer, p{
-
+header, footer {
+    background: red;
+    width: 100%;
+    margin: 2px;
+}
+header.site-title {
+    color:blue;
+}
+#my-image{
+    box-shadow: 0px 0px 2px 1px rgba(40,40,40,0.6);
 }
