--- a/week4/css/style.css
+++ b/week4/css/style.css
@@ -8,11 +8,15 @@ h1 {
 }
 a {
     color: #000000;
-    text-decoration: underline;
+    text-decoration: none;
+    background-color: aqua;
+    border-style: solid;
+    border-width: 3px;
+    border-color: pink;
 }
 a:hover {
     color: #000000;
-    text-decoration: none;
+    background-color: lime;
 }
 h2 {
     font-size: 16px;
@@ -30,4 +34,13 @@ header.site-title {
 }
 #my-image{
     box-shadow: 0px 0px 2px 1px rgba(40,40,40,0.6);
+}
+.mydiv p:nth-child(odd){
+    background-color: yellow;
+}
+li{
+    list-style: none;
+}
+li:before{
+    content: "\25A0"
 }
