--- a/html-assignment/css/style.css
+++ b/html-assignment/css/style.css
@@ -35,8 +35,8 @@ header.site-title {
 #my-image{
     box-shadow: 0px 0px 2px 1px rgba(40,40,40,0.6);
 }
-.mydiv p:nth-child(odd){
-    background-color: yellow;
+.mydiv li:nth-child(odd){
+    background-color: rgb(255, 0, 242);
 }
 li{
     list-style: none;
