--- a/html-assignment/css/style.css
+++ b/html-assignment/css/style.css
@@ -36,7 +36,7 @@ header.site-title {
     box-shadow: 0px 0px 2px 1px rgba(40,40,40,0.6);
 }
 .mydiv li:nth-child(odd){
-    background-color: rgb(255, 0, 242);
+    background-color: yellow
 }
 li{
     list-style: none;
