--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -1,91 +1,81 @@
-body {
-    font-family: Helvetica, sans-serif;
-    background-color: #32536e
-
-}
 html {
     display: table;
     margin: 0px auto 0px auto;
 }
-.wrapper {
-    background-color: #394952;
-    width: auto;
-    margin: auto;
-}
-body {
-    margin: 0;
-    padding: 0;
-    width: 1000px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: linear-gradient(100deg, hsla(11,22%,30%,255) 0%, #296294 100%);
-}
 
-.img-ctr {
-    background-color:#32536e;
-    width: 1599px;
-    height: 604px;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 1px 4px 22px 1px rgba(0, 0, 0, 0.44);
-}
-
-
-h1 {
-    position: relative;
-    position: absolute;
-    color: white;
+body{
+    width: 800px;
     font-family: Helvetica, sans-serif;
-    font-size: 150px;
-    letter-spacing: 3px;
+    background: linear-gradient(100deg, hsla(11,22%,30%,255) 0%, #296294 100%);
+    margin-top: 0px;
 }
 
-.display li {
-    display: inline-block;
-    padding: 10px;
-    height: 40px;
-    position: center;
-    font-size: 40px;
-
+main{
+    background-color: #394952;
 }
 
-a {
+.header img{
+    width: 100%;
+    height: 160px;
+    object-fit: cover;
+}
+
+.header{
+    position: relative;
+    text-align: center;
     color: white;
+    height: 160px;
+    letter-spacing: 2px;
+    font-weight: bold;
 }
 
+.title {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 50px;
+}
+/* table for home store and contact */
+.directory{
+    display: table;
+    width: 100%; 
+    table-layout: fixed; 
+    margin-top: 0px;
+    
 
-h2 {
-    color: white;
-    font-size: 40px;
+}
+
+.article h2{
     margin: 15px;
-    margin-left: 25px;
-}
-
-.chino2 {
-    float: left;
-    margin: 25px;
-    float: left;
-
-}
-
-.paragraph {
+    margin-left: 15px;
     color: white;
-    font-size: 26px;
-    margin: 25px;
-    line-height: 40px;
+}
+
+/* img with float to wrap text around it */
+.article img{
+    width: 160px;
+    height: auto;
+    float: left;
+    margin: 15px;
+}
+
+p{
+    text-align: justify;
+    margin: 15px;
+    color: white;
+    line-height: 25px;
 }
 
 .cell{
     display: table-cell;
     text-align: center;
-    font-size: 35px;
+    font-size: 30px;
     cursor: pointer;
+    color: white;
 }
 
+/* customisation for the lines inbetween Home, Store and Contact and hover effects */
 .cell:hover {
     background-color: lightgray;
   }
@@ -98,72 +88,62 @@ h2 {
     border-left: 1.5px solid white;
 }
 
-.directory{
-    display: table;
-    width: 100%; 
-    table-layout: fixed; 
-    margin-top: 8px;
-    color: white;
-}
-
 h3{
-    margin: 25px;
-    margin-left: 25px;
+    margin: 15px;
+    margin-left: 15px;
     margin-bottom: 5px;
-    font-size: 40px;
     color: white;
+    font-size: 22px;
 }
 
 .factlist{
-    margin: 25px;
-    font-size: 26px;
+    margin: 4px;
     color: white;
-    line-height: 40px;
 }
 
 .contactbox{
-    margin: 25px;
-    border: 2px solid white;
+    margin: 15px;
+    border: 1.5px solid white;
 }
 
 .contactbox div{
     margin: 14px 0px 0px 8px;
-    font-size: 30px;
     color: white;
 }
-
+/* contact boxes customisations */
 .contactbox .txtbox{
     margin: 2px 0px 0px 8px;
-    font-size: 26px;
-    width: 1520px;
+    width: 745px;
 }
 
 #messagebox {
     height: 100px;
 }
 
+/* radial buttons */
 .radiobtn {
     margin: 2px 5px 15px 1.5px;
-    width: 22px;
-    height: 22px;
 }
 
-button{
-    margin: 10px;
+/* send button */
+.block {
+    display: block;
+    width: 80px;
+    border-radius: 10px;
+    border-color: #943c22;
+    background-color: white;
+    padding: 14px 14px;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+    margin: 5px;
 }
 
 textarea { 
 resize: none; 
 }
 
-.block {
-    display: block;
-    width: 150px;
-    border-radius: 10px;
-    background-color: white;
-    padding: 14px 28px;
-    font-size: 26px;
-    cursor: pointer;
-    text-align: center;
+.copyright {
+    text-align: right;
+    padding: 15px;
 }
-  
